--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,6 +8,7 @@
 /* Import partials*/
 @import "../partials/commons";
 @import "../partials/palette-colours";
-@import "../partials/header"
+@import "../partials/header";
+@import "../partials/main";
 // /* /Import partials*/
 
