--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -4,7 +4,9 @@
     color: $color;
     padding-top: 1rem;
     border-bottom: 1px solid black;
-    margin: 0 20%;
+    width: 80%;
+    margin: auto;
+    justify-content: space-between;
     ul{
       display: flex;
       color: $color;
