--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,6 +4,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+body{
+  width: 100%;
+}
 /* general settings */
 /* Import partials*/
 @import "../partials/commons";
