--- a/src/partials/_commons.scss
+++ b/src/partials/_commons.scss
@@ -1,6 +1,7 @@
 // mixin class
 @mixin d-flex-space {
     display: flex;
+    flex-wrap: wrap;
 }
 @mixin list-style-none {
     list-style-type: none;
@@ -10,8 +11,17 @@
     height: 20px;
     padding: 1px;
 }
+@mixin width-center {
+    margin: auto;
+    width: 80%;
+}
 // general buttons
 @mixin button-focus-hover {
+    align-items: center;
+    padding: 2px 5px;
+    margin-bottom: 5px;
+    border-radius: 4px;
+    border: none;
     &:focus{
         outline: none;
     }
@@ -24,3 +34,9 @@
     }
 }
 // /mixin class
+// media queries variables
+    $mobile: 550px;
+    $tablet-min: 550px;
+    $tablet-max: 998px;
+    $desktop: 999px;
+// / media queries variables
