--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -1,30 +1,66 @@
+
 #banner{
     @include d-flex-space;
+    @include width-center;
     padding-top: 3rem;
-    width: 80%;
-    margin: auto;
+    // height: 30rem;
     .info_banner{
+        // media queries
+        @media screen and (max-width: $tablet-max){
+            width: 100%;
+            height: 20rem;
+            h1{
+                text-align: center;
+            }
+            p{
+                text-align: center;
+            }
+        }
         width: 50%;
-        border: 1px solid $color;
         // title
         h1{
-            font-size: 4rem;
+            font-size: 3rem;
             font-weight: 500;
         }
+        p{
+            line-height: 2rem;
+            padding: 1rem 0;
+        }
         .sign_banner{
+            @include d-flex-space;
+            align-items: center;
+            @media screen and (max-width: $tablet-max){
+               justify-content: center;
+            }
             button{
                 @include d-flex-space;
+                @include button-focus-hover;
+                background-color: rgb(33, 52, 127);
+                color: white;
+                width: 10rem;
                 img{
                     @include img-button;
                 }
             }
-            
         }
     }
     .img_banner{
+        @media screen and (max-width: $tablet-max){
+            width: 100%;
+        }
+        // background-image: url('../../dist/images/illustration-main.jpg');
+        background-repeat: no-repeat;
+        background-size: contain;
+        height: 100%;
         width: calc(100% - 50%);
+        height: 100%;
         img{
             width: 100%;
         }
     }
+}
+.business_explain{
+    background-color: $background;
+    height: 50rem;
+    // width: auto;
 }
