--- a/src/partials/_palette-colours.scss
+++ b/src/partials/_palette-colours.scss
@@ -1,3 +1,4 @@
 $color: red;
 // background palette
-$background: rgb(254, 225,	199);
+$background-baige: rgb(254, 225,	199);
+$bg-light-blue: rgb(131, 188, 197);
